datatables-vue ideas

--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -1585,7 +1585,7 @@ li.active .nav-drop-icon {
 
 .sidebar-profile {
     padding: 10px 24px;
-    background: url('/img/tecno.PNG');
+    background: white;
     background-size: cover;
 }
 
