--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -136,7 +136,7 @@ a:focus {
 
 
 /* Loading */
-
+/*
 body:not(.loaded) .mn-content {
     opacity: 0;
 }
@@ -175,7 +175,7 @@ body:not(.loaded) .mn-content {
     opacity: 0;
     position: relative;
 }
-
+*/
 
 /* Header */
 
