--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -2421,6 +2421,7 @@ li.active .nav-drop-icon {
 }
 
 .side-nav ul li a.active-page,
+.side-nav ul li i.active-icon,
 .side-nav.fixed ul li a.active-page {
     font-weight: 500;
     color: #008981;
