se reemplazo la funcionalidad de los laboratorios por los equipos

--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -18267,7 +18267,7 @@ h5.breadcrumbs-header {
   font-weight: 400;
 }
 /* colores institucionales */
-
+/*
 .btn-flat-sena {
     font-weight: 500;
     font-size: 20px;
@@ -18283,7 +18283,7 @@ h5.breadcrumbs-header {
 
 .waves-effect.waves-light-sena-add .waves-ripple {
     background-color: #59b548;
-}
+}*/
 
 /* Waves */
 
