--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -74,7 +74,7 @@ h5.breadcrumbs-header {
   font-weight: 400;
 }
 /* colores institucionales */
-
+/*
 .btn-flat-sena {
     font-weight: 500;
     font-size: 20px;
@@ -90,7 +90,7 @@ h5.breadcrumbs-header {
 
 .waves-effect.waves-light-sena-add .waves-ripple {
     background-color: #59b548;
-}
+}*/
 
 /* Waves */
 
