--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -73,42 +73,12 @@ h5.breadcrumbs-header {
   font-family: 'Zurich BT';
   font-weight: 400;
 }
-/* colores institucionales */
-/*
-.btn-flat-sena {
-    font-weight: 500;
-    font-size: 20px;
+
+/*color tabs personalizados vicmo*/
+.tabs .tab .active {
+  color:#26a69a;
+  /*Custom Text Color While Active*/
+  background-color: rgba(89, 181, 72, 0.2);
+  /*Custom Background Color While Active*/
 }
 
-.btn-flat.waves-orange-sena {
-    color: #fc7323;
-}
-
-.waves-effect.waves-orange-sena .waves-ripple {
-    background-color: #fc7323
-}
-
-.waves-effect.waves-light-sena-add .waves-ripple {
-    background-color: #59b548;
-}*/
-
-/* Waves */
-
-/*.waves-color-demo-sena-agregar .btn:not(.waves-light-sena-add ), .waves-color-demo-sena .btn-large-sena-agregar:not(.waves-light-sena-add ) {
-    background-color: #59b548;
-    color: #59b548;
-}
-
- .btn-large-sena-agregar {
-  text-decoration: none;
-  color: #fff;
-  background-color: #59b548;
-  text-align: center;
-  letter-spacing: .5px;
-  transition: .2s ease-out;
-  cursor: pointer;
-}*/
-
-/* .btn-large-sena-agregar:hover {
-  background-color: #59b548;
-}*/
