--- a/resources/assets/plugins/font-awesome/css/all.css
+++ b/resources/assets/plugins/font-awesome/css/all.css
@@ -19,7 +19,15 @@
 .fa-lg {
   font-size: 1.33333em;
   line-height: 0.75em;
-  vertical-align: -.0667em; }
+  vertical-align: -.0667em;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased; }
 
 .fa-xs {
   font-size: .75em; }
