--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -69,10 +69,26 @@ h5.breadcrumbs-header {
   font-weight: 400;
 }
 
+
 .zurich-bt-fonts {
   font-family: 'Zurich BT';
   font-weight: 400;
 }
+
+
+.green-complement {
+  background-color: #59b548 !important;
+}
+
+.green-complement-text {
+  color: #59b548 !important;
+}
+
+.zurich-bt-fonts .green-complement-text {
+  font-weight: bolder;
+}
+
+
 
 /*color tabs personalizados vicmo*/
 .tabs .tab .active {
