--- a/resources/assets/plugins/materialize/css/materialize.css
+++ b/resources/assets/plugins/materialize/css/materialize.css
@@ -1652,11 +1652,11 @@
 }
 
 .orange {
-  background-color: #ff9800 !important;
+  background-color: #fc7323 !important;
 }
 
 .orange-text {
-  color: #ff9800 !important;
+  color: #fc7323 !important;
 }
 
 .orange.lighten-5 {
