--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -1552,7 +1552,7 @@ li.active .nav-drop-icon {
 @media (max-width: 600px) {
     .side-nav .sidenav-logo a {
         height: 56px;
-|        padding: 8px 0 7px 24px;
+       padding: 8px 0 7px 24px;
     }
 }
 
@@ -4272,6 +4272,13 @@ select {
     display: block;
     position: absolute;
 }
+
+.vertical-line{ border-right:2px solid black;  }
+        @media screen and (max-width: 600px) {
+            .vertical-line{
+                border-right:0px solid white;
+            }
+        }
 
 
 
