se corrigio el mensaje esp, se cambio el verde azul por naranja como color primario y se agrago el nuevo video de tecnoparque

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -33,7 +33,7 @@ h5.breadcrumbs-header {
     display: inline-block
 }
 .breadcrumbs>li>a {
-    color: #009891;
+    color: #fd7e14;
 }
 .breadcrumbs>li+li:before {
     padding: 0 5px;
