se cambio los estilos de la app, color primario naranja

--- a/public/css/Estilos.css
+++ b/public/css/Estilos.css
@@ -301,7 +301,7 @@ ul {
     width: 80%;
     max-width: 800px;
     height: 400px;
-    background: red;
+    background: #FF6B00;
     position: absolute;
     top: 0px;
     bottom: 0px;
