se subió el botón de búsqueda de usuario para que no este encima del footer,El texto del footer se corrió un poco a la izquierda para que no quedara tan pegado de la derecha,Se agrego el botón de búsqueda de empresa en el rol talento,Se cambio la línea grafica del botón nuevo uso de infraestructura,Se movió el texto y el titulo de Empresas para que no quede fuera de la pantalla

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -238,6 +238,15 @@ h5.breadcrumbs-header {
     /*Custom Background Color While Active*/
 }
 
+.fixed-action-btn {
+    position: fixed;
+    top: 63%;
+    right: 3%;
+    bottom: 23px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    z-index: 998;
+  }
   
 
 
