--- a/public/css/EstilosMovil.css
+++ b/public/css/EstilosMovil.css
@@ -1,5 +1,21 @@
 @media screen and (max-width: 520px) {
     /*Home*/
+    
+
+
+    #noticia {
+        width: 50px;
+        height: 50px;
+        background-color: white;
+        position: relative;
+    }
+    
+    .presentNoti {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        flex-direction: row;
+    }
     .logo-tecno {
         display: none;
     }
@@ -51,11 +67,11 @@
         background-color: red;
     }
     .logo-tecno-cel {
-        width: 400px;
+        width: 100%;
         height: 200px;
         position: absolute;
         top: 46px;
-        left: 27px;
+        left: 0px;
         display: block;
     }
     .tex-logo-cel {
@@ -89,6 +105,7 @@
     .titulos-ciudades-nodos-movil,
     .contenido-nodo {
         width: 95%;
+        margin: 10px auto;
     }
     .nodos-movil-mapa {
         margin-top: 20px;
@@ -173,6 +190,7 @@
     .nodos-movil-mapa {
         margin-top: 20px;
         height: 300px;
+        width: 100%;
     }
     /*-----noticias----*/
     .boton-escritorio {
@@ -198,6 +216,7 @@
         width: 50px;
         position: absolute;
         top: 100px;
+        visibility: hidden;
     }
     .contenedor-principal {
         width: 900%;
