--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -4670,7 +4670,7 @@ small {
 }
 
 .card .card-content {
-  padding: 20px;
+  padding: 2px;
   border-radius: 0 0 2px 2px;
 }
 
@@ -5028,7 +5028,8 @@ button.btn-floating {
 
 .fixed-action-btn {
   position: fixed;
-  right: 23px;
+  top: 63%;
+  right: 3%;
   bottom: 23px;
   padding-top: 15px;
   margin-bottom: 0;
@@ -18059,6 +18060,8 @@ body.mailbox .page-footer {
     float: right;
     text-align: right;
     width: 50%;
+    position: absolute;
+    right: 3%;
 }
 
 .page-footer .footer-grid .footer-grid-l .footer-text {
@@ -18269,7 +18272,6 @@ select {
                 border-right:0px solid white;
             }
         }
-
 
 
 
@@ -18515,6 +18517,15 @@ h5.breadcrumbs-header {
     /*Custom Background Color While Active*/
 }
 
+.fixed-action-btn {
+    position: fixed;
+    top: 63%;
+    right: 3%;
+    bottom: 23px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    z-index: 998;
+  }
   
 
 
