--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -4131,6 +4131,8 @@ body.mailbox .page-footer {
     float: right;
     text-align: right;
     width: 50%;
+    position: absolute;
+    right: 3%;
 }
 
 .page-footer .footer-grid .footer-grid-l .footer-text {
@@ -4341,7 +4343,6 @@ select {
                 border-right:0px solid white;
             }
         }
-
 
 
 
