--- a/resources/assets/plugins/materialize/css/materialize.css
+++ b/resources/assets/plugins/materialize/css/materialize.css
@@ -4670,7 +4670,7 @@ small {
 }
 
 .card .card-content {
-  padding: 20px;
+  padding: 2px;
   border-radius: 0 0 2px 2px;
 }
 
@@ -5028,7 +5028,8 @@ button.btn-floating {
 
 .fixed-action-btn {
   position: fixed;
-  right: 23px;
+  top: 63%;
+  right: 3%;
   bottom: 23px;
   padding-top: 15px;
   margin-bottom: 0;
