--- a/resources/assets/plugins/materialize/css/materialize.css
+++ b/resources/assets/plugins/materialize/css/materialize.css
@@ -935,10 +935,6 @@
   background-color: #00838f !important;
 }
 
-.cyan-text.text-darken-3 {
-  color: #00838f !important;
-}
-
 .cyan.darken-4 {
   background-color: #006064 !important;
 }
@@ -8470,4 +8466,8 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   .picker--time .picker__box {
     margin-bottom: 5em;
   }
+}
+
+.cyan-text.text-darken-3 {
+  color:#ff8f00 !important;
 }
