--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2729,7 +2729,7 @@ nav {
 .divider {
   height: 1px;
   overflow: hidden;
-  background-color: #e0e0e0;
+  background-color: var(--primary);
 }
 
 blockquote {
