--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -1,5 +1,73 @@
 /* Write your custom CSS here */
 
+:root {
+    --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    --yellow: #ffc107;
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary-lighten: #c8e6c9;
+    --primary: #39A900;
+    --primary-darken: #1b5e20;
+    --secondary: #00324D;
+    --tertiary: #82DEF0;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;
+    --light: #f8f9fa;
+    --dark: #343a40;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    --font-family-work-sans: "Work Sans", -apple-system,Roboto, BlinkMacSystemFont, "Segoe UI",  "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+html {
+    font-family: var(--font-family-work-sans);
+}
+
+.side-nav.fixed ul li.active > a.collapsible-header, .side-nav.fixed ul li.active > a {
+    font-weight: 500;
+}
+.side-nav ul li a.active-page, .side-nav.fixed ul li a.active-page {
+    font-weight: 500;
+    color: var(--primary);
+}
+
+.bg-primary {
+    background-color: var(--primary) !important;
+}
+
+.bg-secondary {
+    background-color: var(--secondary) !important;
+}
+
+.bg-tertiary {
+    background-color: var(--tertiary) !important;
+}
+
+.bg-info {
+    background-color: var(--info) !important;
+}
+
+.primary-text {
+    color: var(--primary) !important;
+}
+
+.secondary-text {
+    color: var(--secondary) !important;
+}
+
 .jvectormap-legend-title {
     font-size: 12px;
 }
@@ -33,7 +101,7 @@ h5.breadcrumbs-header {
     display: inline-block
 }
 .breadcrumbs>li>a {
-    color: #fd7e14;
+    color: var(--primary);
 }
 .breadcrumbs>li+li:before {
     padding: 0 5px;
@@ -214,7 +282,7 @@ h5.breadcrumbs-header {
 }
 
 .tabs .tab a {
-    color: #ff8f00;
+    color: var(--primary);
 }
 
 .tabs .tab a:hover {
@@ -227,14 +295,14 @@ h5.breadcrumbs-header {
 }
 
 .tabs .indicator {
-    background-color: #ff8f00;
+    background-color:  var(--primary);
 }
 
 /*color tabs personalizados vicmo*/
 .tabs .tab .active {
-    color:#ff8f00;
+    color: var(--primary);
     /*Custom Text Color While Active*/
-    background-color: rgba(241, 195, 93, 0.548);
+    background-color: var(--primary-lighten);
     /*Custom Background Color While Active*/
 }
 
