--- a/resources/assets/plugins/materialize/css/materialize.css
+++ b/resources/assets/plugins/materialize/css/materialize.css
@@ -2694,7 +2694,7 @@ a {
 .divider {
   height: 1px;
   overflow: hidden;
-  background-color: #e0e0e0;
+  background-color: var(--primary);
 }
 
 blockquote {
