--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -77,7 +77,7 @@ a:focus {
 }
 
 .waves-effect.waves-light .waves-ripple {
-    background-color: #fc7323;
+    background-color: var(--primary-lighten);
 }
 
 .waves-effect.waves-grey .waves-ripple {
@@ -3569,9 +3569,11 @@ body.search-app .search-input input:-ms-input-placeholder {
 .signin-page {
     height: 100%;
     width: 100%;
-    background-image: url('/img/Tecnoparque_Fondo.jpg'); /* The image used */
-    background-color: #var(--primary); /* Used if the image is unavailable */
-    background-position: center; /* Center the image */
+    background-image: url('/img/banner.jpg'); /* The image used */
+    /*background-color: var(--primary);*/ /* Used if the image is unavailable */
+    /*background: rgb(0,50,77);
+    background: linear-gradient(90deg, rgba(0,50,77,1) 0%, rgba(57,169,0,1) 50%, rgba(255,255,255,1) 100%);}*/
+    background-position: bottom; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
 }
