se organizo breakcrums y diseño (color) del modulo de usuarios y pagínas publicas

--- a/resources/assets/css/alpha.css
+++ b/resources/assets/css/alpha.css
@@ -1825,7 +1825,7 @@ code:after {
 /* Blockquote */
 
 blockquote {
-    border-left: 5px solid #607d8b;
+    border-left: 5px solid var(--secondary);
 }
 
 
