--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -15753,7 +15753,7 @@ code:after {
 /* Blockquote */
 
 blockquote {
-    border-left: 5px solid #607d8b;
+    border-left: 5px solid var(--secondary);
 }
 
 
@@ -18365,6 +18365,38 @@ html {
 
 .secondary-text {
     color: var(--secondary) !important;
+}
+
+.success-text {
+    color: var(--success) !important;
+}
+
+.info-text {
+    color: var(--info) !important;
+}
+
+.warning-text {
+    color: var(--warning) !important;
+}
+
+.danger-text {
+    color: var(--danger) !important;
+}
+
+.btn-flat.waves-primary {
+    color: var(--primary) !important;
+}
+.btn-flat.waves-success {
+    color: var(--success) !important;
+}
+.btn-flat.waves-danger {
+    color: var(--danger) !important;
+}
+.btn-flat.waves-warning {
+    color: var(--warning) !important;
+}
+.btn-flat.waves-info {
+    color: var(--info) !important;
 }
 .h-12{
     height: 3rem;
