--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -36,6 +36,10 @@ html {
     font-family: var(--font-family-work-sans);
 }
 
+p {
+    margin: 0px;
+}
+
 .side-nav.fixed ul li.active > a.collapsible-header, .side-nav.fixed ul li.active > a {
     font-weight: 500;
 }
